--- a/LOL-Lens/app.json
+++ b/LOL-Lens/app.json
@@ -9,7 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.LOL-Lens"
     },
     "android": {
       "adaptiveIcon": {
