--- a/LOL-Lens/package.json
+++ b/LOL-Lens/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.0.14",
     "convex": "^1.18.2",
     "expo": "~52.0.25",
+    "expo-auth-session": "~6.0.2",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
@@ -35,6 +36,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-auth0": "^4.0.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
