--- a/LOL-Lens/package.json
+++ b/LOL-Lens/package.json
@@ -20,6 +20,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "bcryptjs": "^2.4.3",
     "convex": "^1.18.2",
     "expo": "~52.0.25",
     "expo-auth-session": "~6.0.2",
@@ -30,6 +31,7 @@
     "expo-image": "~2.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
