--- a/LOL-Lens/package.json
+++ b/LOL-Lens/package.json
@@ -22,14 +22,16 @@
     "babel-preset-expo": "^12.0.6",
     "convex": "^1.18.2",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.25",
+    "expo": "^52.0.25",
     "expo-blur": "~14.0.2",
+    "expo-cli": "^6.3.12",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
@@ -47,13 +49,13 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-sharing": "~13.0.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
