--- a/LOL-Lens/package.json
+++ b/LOL-Lens/package.json
@@ -26,9 +26,12 @@
     "expo-blur": "~14.0.2",
     "expo-cli": "^6.3.12",
     "expo-constants": "~17.0.4",
+    "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.3",
+    "expo-graphics": "^2.0.0",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
+    "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
     "expo-sharing": "~13.0.1",
@@ -49,8 +52,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-image-picker": "~16.0.4"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
